site: unapply the scrollbar width fix for narrower screens

--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
 }
 body {
 	margin: 0;
-	margin-left: calc(100vw - 100%); /* fixes the scrollbar jumping issue, see https://stackoverflow.com/q/6357870/3995261 */
 	background-color: #777777;
+}
+@media (min-width: 60em) {
+	body {
+		margin-left: calc(100vw - 100%); /* fixes the scrollbar jumping issue, see https://stackoverflow.com/q/6357870/3995261 */
+	}
 }
 .wrapper {
 	background-color: var(--main-gray);
